# scikit-learn-extra

./: .codecov.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  appveyor.yml  azure-pipelines.yml  conftest.py  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  vim.exe.stackdump
.circleci/: config.yml
.github/workflows/: build-wheels.yml  python-package.yml
benchmarks/: bench_rbfsampler_fastfood.py
benchmarks/_bench/: eigenpro_plot_mnist.py  eigenpro_plot_noisy_mnist.py  eigenpro_plot_synthetic.py  robust_plot_synthetic.py
doc/: api.rst  changelog.rst  conf.py  contributing.rst  docs.md  index.rst  install.rst  quick_start.rst  requirements-doc.txt  user_guide.rst
doc/modules/: cluster.rst  (+6 more)
examples/: plot_RobustClassification.py  plot_RobustClassification_diabete.py  plot_RobustClassification_toy.py  plot_RobustRegression.py  plot_RobustRegression_california_houses.py  plot_RobustRegression_toy.py  plot_clara_digits.py  plot_classifier.py  plot_clustering.py  plot_cnn.py  plot_commonnn.py  plot_commonnn_data_sets.py  plot_digits_classification_fastfood.py  plot_kernel_approximation.py  plot_kmedoids.py  plot_kmedoids_digits.py  plot_robust_classification_diabete.py  plot_robust_classification_toy.py  plot_robust_kmeans.py  plot_robust_regression_california_houses.py  plot_robust_regression_toy.py  plot_template.py  plot_transformer.py
sklearn/: kernel_approximation.py
sklearn_extra/: __init__.py  _version.py  eigenpro.py  fast_kernel.py
(+69 files in other folders)
