[build-system]
# build with the oldest numpy that has pre-build wheels for Py3.7 on PyPi
requires = [
    "setuptools",
    "wheel",
    "cython>=0.28",
    "numpy==1.14.5; python_version=='3.5' and platform_system!='AIX'",
    "numpy==1.14.5; python_version=='3.6' and platform_system!='AIX'",
    "numpy==1.14.5; python_version=='3.7' and platform_system!='AIX'",
    "numpy==1.17.3; python_version>='3.8' and platform_system!='AIX'",
    # Minimum supported numpy 1.16 for AIX
    # see https://github.com/scipy/scipy/pull/10431
    "numpy==1.16.0; python_version=='3.5' and platform_system!='AIX'",
    "numpy==1.16.0; python_version=='3.6' and platform_system=='AIX'",
    "numpy==1.16.0; python_version=='3.7' and platform_system=='AIX'",
    "numpy==1.17.3; python_version>='3.8' and platform_system=='AIX'",
]

[tool.black]
line-length = 79
